2019-08-21      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/patches/gcc/trunk/01-patches:  regenerated.
	* gm2/patches/gcc/trunk/02-patches:  regenerated.
	* gm2/patches/gcc/trunk/03-patches:  regenerated.
	* gm2/patches/gcc/trunk/04-patches:  regenerated.
	* gm2/patches/gcc/trunk/05-patches:  regenerated.
	* gm2/patches/gcc/trunk/06-patches:  regenerated.
	* gm2/patches/gcc/trunk/07-patches:  regenerated.
	* gm2/patches/gcc/trunk/08-patches:  regenerated.
	* gm2/patches/gcc/trunk/09-patches:  regenerated.
	* gm2/patches/gcc/trunk/10-patches:  regenerated.

2019-08-20      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  use -p parameter for mkdir.
	* gm2/gm2-compiler/M2GenGCC.mod:  (BuildModM2Check) imported.
          (CodeStatement)  call CodeModM2Checked.  (CodeModM2Checked)
          New procedure.  (CodeModM2Check)  New procedure.
	* gm2/gm2-gcc/m2expr.c:  (BuildModTruncCheck)  New function.
          (Build3TruthOrIf)  New function.  (checkWholeModTruncOverflow)
          New function.  (BuildModM2Check) New function.
          (checkWholeOverflow) call checkWholeModTruncOverflow.
	* gm2/gm2-gcc/m2expr.def:  (BuildModM2Check)  New procedure
          function.
	* gm2/gm2-gcc/m2expr.h:  (BuildModM2Check)  New function.
	* gm2/m2pp.c:  (m2pp_truth_expr)  New function.
          (m2pp_simple_expression) detect TRUTH_ANDIF_EXPR and
          TRUTH_ORIF_EXPR and call m2pp_truth_expr.
	* testsuite/gm2/switches/check-all/plugin/fail/gm2.exp:
          use pim2 options to stress the modulus checking.
	* testsuite/gm2/switches/check-all/plugin/fail/modulus.mod:
	  print the values to ensure that the code is not thrown away.

2019-08-20      Matthias Klose  <doko@cs.tu-berlin.de>

	* gm2/Make-lang.in:  added dependancies for subdir
          creation.

2019-08-20      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/tools-src/buildsyntax:  removed function keyword
          to be sh compliant rather than bash.